--- a/theme/foyers/templates/blocks/formulaire/infos_complementaires.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_complementaires.html
@@ -47,11 +47,11 @@
             <input type="radio"  name="annonces" id="annonces" value="annonces" ng-model="contactCtrl.contactData.origine">
                         <label for="annonces" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Annonces")}}</label>
             <div class="col-sm-3">
-                <input type="radio" name="autre" id="autre" value="autre" ng-model="contactCtrl.contactData.origine">
+                <input type="radio" name="autre" id="autre" value="autre" ng-model="contactCtrl.contactData.autre">
                             <label for="autre" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Autre")}}</label>
             </div>
             <div class="col-sm-5">
-                <input class="form-control" type="text" id="precisions" ng-model="contactCtrl.contactData.precisions" name="precisions" placeholder="Préciser...">
+                <input class="form-control" type="text" id="precisions" ng-model="contactCtrl.contactData.origine" name="precisions" placeholder="Préciser...">
             </div>
             
                         
