--- a/theme/foyers/templates/blocks/formulaire/lettre_motivation.html
+++ b/theme/foyers/templates/blocks/formulaire/lettre_motivation.html
@@ -1,7 +1,7 @@
 <div class="container">
         <div class="row">
             <div class="col-sm-4"><label for="motivation" class="label_style">{{rubedo.translate("Block.Inscription.Motivation.Presentation")}} *</label></div>
-            <div class="col-sm-8"><textarea class="form-control" rows="5" id="motivation" ng-model="inscription.motivation" name="motivation" placeholder="Présente-toi brièvement (loisirs, études demandées...)" required></textarea></div>
+            <div class="col-sm-8"><textarea class="form-control" rows="5" id="motivation" ng-model="contactCtrl.contactData.motivation" name="motivation" placeholder="Présente-toi brièvement (loisirs, études demandées...)" required></textarea></div>
         </div>
 </div>
 <div class="container">
