--- a/theme/foyers/templates/mails/testProgressif.html
+++ b/theme/foyers/templates/mails/testProgressif.html
@@ -65,23 +65,23 @@
                     </ng-form>
                 </div>
                 
-                <h2 class="capital txt-red" ng-class="{'displayed' : formCtrl.currentStage==4}" ng-click="formCtrl.setCurrentStage(3,infos_complementaires.$valid)">{{rubedo.translate("Block.Inscription.Infos.Complementaires","Informations complémentaires")}}
-                                <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="formCtrl.currentStage>4"></span>
+                <h2 class="capital txt-red" ng-class="{'displayed' : contactCtrl.currentStage==4}" ng-click="contactCtrl.setCurrentStage(3,infos_complementaires.$valid)">{{rubedo.translate("Block.Inscription.Infos.Complementaires","Informations complémentaires")}}
+                                <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="contactCtrl.currentStage>4"></span>
                 </h2>
                 
                 <div id="inscriptionStage4" class="collapse">
                             <ng-form name="infos_complementaires">
                                     <div  class="row" ng-include="contactCtrl.complement_infos"></div>
                                     <div class="row text-center">
-                                        <div class="button submit cursor-as-pointer" ng-class="{'disabled' : infos_complementaires.$invalid}" ng-click="formCtrl.setCurrentStage(4,infos_complementaires.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
+                                        <div class="button submit cursor-as-pointer" ng-class="{'disabled' : infos_complementaires.$invalid}" ng-click="contactCtrl.setCurrentStage(4,infos_complementaires.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
                                         <p ng-if="infos_complementaires.$invalid && infos_complementaires.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
                                     </div>
                             </ng-form>
                 </div>
                 
                 
-                <h2 class="capital txt-red" ng-class="{'displayed' : formCtrl.currentStage==5}" ng-click="formCtrl.setCurrentStage(4,lettre_motivation.$valid)">{{rubedo.translate("Block.Inscription.Motivation","Lettre de motivation")}}
-                        <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="formCtrl.currentStage>4"></span>
+                <h2 class="capital txt-red" ng-class="{'displayed' : contactCtrl.currentStage==5}" ng-click="contactCtrl.setCurrentStage(4,lettre_motivation.$valid)">{{rubedo.translate("Block.Inscription.Motivation","Lettre de motivation")}}
+                        <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="contactCtrl.currentStage>4"></span>
                 </h2>
                 
                 <div id="inscriptionStage5" class="collapse">
