--- a/theme/foyers/templates/mails/reservationJeunePro.html
+++ b/theme/foyers/templates/mails/reservationJeunePro.html
@@ -70,7 +70,38 @@
     <tr><td bgcolor='#8CACBB' width=33%><i>Suivi médical</i></td><td colspan=2 width=67%>{ detailsSuiviMedical }</td></tr>
 </table><br/><br/>
 
+<p>************************************************************************************************************************************************</p>
+<p><b>Pour transférer les données vers un tableur Excel</b></p><br/>
 
+<table style='border: 1px solid #000000' frame='box' rules='all'>
+    <tr bgcolor='#8CACBB'><td><i>Statut</i></td><i>Nom</i></td><td><i>Prénom</i></td><td><i>Sexe</i></td><td><i>Date de naissance</i></td><td><i>Email</i></td><td><i>Téléphone</i></td><td><i>Nationalité</i></td></tr>
+    <tr><td>Jeune Pro</td><td>{ nom }</td><td>{ prenom }</td><td>{ sexe }</td><td>{ birthdate }</td><td>{ email }</td><td>{ tel }</td><td>{ nationality }</td></tr>
+</table><br/>
+
+<table style='border: 1px solid #000000' frame='box' rules='all'>
+    <tr bgcolor='#8CACBB'><td><i>Nom (père)</i></td><td><i>Prénom (père)</i></td><td><i>Profession (père)</i></td><td><i>Email (père)</i></td><td><i>Tel. port. (père)</i></td><td><i>Tel prof. (père)</i></td><td><i>Tel. fixe (père)</i></td><td><i>Adresse (père)</i></td><td><i>Code postale (père)</i></td><td><i>Ville (père)</i></td><td><i>Pays (père)</i></td><td><i>Nationalité (père)</i></td></tr>
+    <tr><td><i>{ namePere }</i></td><td>{ surnamePere }</td><td>{ professionPere }</td><td>{ emailPere }</td><td>{ tel1Pere }</td><td>{ tel3Pere }</td><td>{ tel2Pere }</td><td>{ addressPere }</td><td>{ cpPere }</td><td>{ cityPere }</td><td>{ countryPere }</td><td>{ nationalitePere }</td></tr>
+</table><br/>
+
+<table style='border: 1px solid #000000' frame='box' rules='all'>
+    <tr bgcolor='#8CACBB'><td><i>Nom (mère)</i></td><td><i>Prénom (mère)</i></td><td><i>Profession (mère)</i></td><td><i>Email (mère)</i></td><td><i>Tel. port. (mère)</i></td><td><i>Tel prof. (mère)</i></td><td><i>Tel. fixe (mère)</i></td><td><i>Adresse (mère)</i></td><td><i>Code postale (mère)</i></td><td><i>Ville (mère)</i></td><td><i>Pays (mère)</i></td><td><i>Nationalité (mère)</i></td></tr> 
+    <tr><td><i>{ nameMere }</i></td><td>{ surnameMere }</td><td>{ professionMere }</td><td>{ emailMere }</td><td>{ tel1Mere }</td><td>{ tel3Mere }</td><td>{ tel2Mere }</td><td>{ addressMere }</td><td>{ cpMere }</td><td>{ cityMere }</td><td>{ countryMere }</td><td>{ nationaliteMere }</td></tr>
+</table><br/>
+
+<table style='border: 1px solid #000000' frame='box' rules='all'>
+    <tr bgcolor='#8CACBB'><td><i>Domaine professionnel</i></td><td><i>Type de contrat</i></td><td><i>Nom de l'employeur</i></td><td><i>Adresse de l'employeur</i></td><td><i>Téléphone de l'employeur</i></td><td><i>Date de début du contrat</i></td><td><i>Date de fin du contrat</i></td><td><i>Diplômes déjà obtenus</i></td></tr>
+    <tr><td><i>{ profession }</i></td><td>{ contrat }</td><td>{ employeur }</td><td>{ adresseEmployeur }</td><td>{ telephoneEmployeur }</td><td>{ dateDebutContrat }</td><td>{ dateFinContrat }</td><td>{ diplomes }</td></tr>
+</table><br/>
+
+<table style='border: 1px solid #000000' frame='box' rules='all'>
+    <tr bgcolor='#8CACBB'><td><i>Loisirs</i></td><td><i>Problèmes médicaux</i></td><td><i>Suivi médical</i></td><td><i>Comment le jeune a-t-il connu le foyer?</i></td></tr>
+    <tr><td><i>{ loisirs }</i></td><td>{ detailsPbsMedicaux }</td><td>{ detailsSuiviMedical }</td><td>{ origine }</td></tr>
+</table><br/>
+
+<table style='border: 1px solid #000000' frame='box' rules='all'>
+    <tr bgcolor='#8CACBB'><td><i>Présentation du jeune</i></td><td><i>Engagements (associatifs, dans l'Église...)</i></td><td><i>Raisons de sa candidature</i></td></tr>
+    <tr><td><i>{ motivation }</i></td><td>{ engagements }</td><td>{ desir }</td></tr>
+</table><br/>
 
     
 
