--- a/theme/foyers/templates/blocks/formulaire/etudes_travail.html
+++ b/theme/foyers/templates/blocks/formulaire/etudes_travail.html
@@ -43,7 +43,7 @@
                         </div>
                     </a>
                     <ul class="dropdown-menu" role="menu">
-                        <datetimepicker data-ng-model="contactCtrl.contactData.dateResultats"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateResultats', startView: 'year', minView:'day'}" data-on-set-time="inscription.dateResultats = (contactCtrl.contactData.dateResultats |date:'dd/MM/yyyy'); moment.locale('fr')"/>
+                        <datetimepicker data-ng-model="contactCtrl.contactData.dateResultats"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateResultats', startView: 'year', minView:'day'}" data-on-set-time="contactCtrl.contactData.dateResultats = (contactCtrl.contactData.dateResultats |date:'dd/MM/yyyy'); moment.locale('fr')"/>
                     </ul> 
                 </div>
             </div>
@@ -147,9 +147,9 @@
         <div class="col-sm-4"><label for="telephoneEmployeur" class="label_style">{{rubedo.translate("Block.Inscription.Employeur.Telephone")}} *</label></div>
         <div class="col-sm-8"><input class="form-control" type="text" rows="3" id="telephoneEmployeur" ng-model="contactCtrl.contactData.telephoneEmployeur" name="telephoneEmployeur" required></div>
     </div>
-    <div class="row" ng-if="!etudiant && !personneConnue">
+    <!--<div class="row" ng-if="!etudiant && !personneConnue">
         <div class="col-sm-4"><label for="salaire" class="label_style">{{rubedo.translate("Block.Inscription.Salaire")}} *</label></div>
         <div class="col-sm-8"><input class="form-control" type="number" id="salaire" ng-model="contactCtrl.contactData.salaire" name="salaire" required></div>
-    </div>
+    </div>-->
 
      
