--- a/theme/foyers/templates/mails/testProgressif.html
+++ b/theme/foyers/templates/mails/testProgressif.html
@@ -3,9 +3,11 @@
         <ng-form name="inscription_form" role="form" ng-submit="contactCtrl.submit()">
         
                
-        
-        <div class="row" class="text-center">
-            <div style="margin-bottom:12px" ><h4>{{rubedo.translate("Block.Inscription.Inscrire.Comme","S'inscrire comme")}}:</h4></div>
+        <div class="text-center">
+                <h1 class="enTete">{{rubedo.translate("Block.Inscription.Fiche", "Formulaire de candidature")}}</h1><br/><br/><br/>
+        </div>
+        <div class="row text-center">
+            <div style="margin-bottom:12px;color:white;font-weight:bold;font-size:1.1em;" ><h4>{{rubedo.translate("Block.Inscription.Inscrire.Comme","S'inscrire comme")}}:</h4></div>
             <div>
                 <input type="radio"  name="statut" id="etudiant" value="etudiant" ng-model="contactCtrl.contactData.statut" ng-click="showFormulaire = true;etudiant=true;jeunePro=false">
                             <label for="etudiant" class="sexe_label boite">{{rubedo.translate("etudiant")}}</label>
@@ -16,9 +18,6 @@
         
 
         <div ng-if="showFormulaire">
-                <div class="text-center">
-                        <h1>{{rubedo.translate("Block.Inscription.Fiche", "Formulaire de candidature")}}</h1><br/><br/><br/>
-                </div>
         
                 <h2 class="capital txt-red" ng-class="{'displayed' : contactCtrl.currentStage==1}" ng-click="contactCtrl.setCurrentStage(0,infos_personnelles.$valid)">{{rubedo.translate("Block.Inscription.InfosPerso", "Informations personnelles")}}
                         <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="contactCtrl.currentStage>1"></span>
@@ -91,7 +90,7 @@
                                 <p ng-if="lettre_motivation.$invalid && lettre_motivation.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
                             </div>
                     </ng-form>
-                    <div class="row">
+                    <div class="row text-center">
                         <div class="button submit cursor-as-pointer" ng-init="confirmMsg=false;" ng-class="{rouge: inscription_form.$valid, disabled: inscription_form.$invalid, submit: inscription_form.$invalid}" ng-click="contactCtrl.submit();confirmMsg=true;">Postuler</div>
                     </div><br/>
                   
@@ -117,5 +116,11 @@
     border-radius: 5px;
     box-shadow: 0px 3px 4px 0px #a8c1a0;
     font-family: Montserrat, Arimo, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  }
+  .enTete {
+    color: #41a0c7!important;
+    background-color: #fff;
+    font-weight: bold;
+    padding: 20px;
   }
 </style>
