--- a/theme/foyers/templates/mails/reservationJeunePro.html
+++ b/theme/foyers/templates/mails/reservationJeunePro.html
@@ -65,7 +65,7 @@
 <table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
     <tr><td bgcolor='#8CACBB' width=100% colspan=3 style='text-align:center;font-size:1.2em;'><i>5) Informations complémentaires</i></td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Loisirs</i></td><td colspan=2 width=67%>{ loisirs }</td></tr>
-    <tr><td bgcolor='#8CACBB' width=33%><i>Comment le jeune a-t-il connu le foyer?</i></td><td width=34%>{ origine }</td><td width=33%>{ precisions }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Comment le jeune a-t-il connu le foyer?</i></td><td width=67%>{ origine }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Problèmes médicaux</i></td><td colspan=2 width=67%>{ detailsPbsMedicaux }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Suivi médical</i></td><td colspan=2 width=67%>{ detailsSuiviMedical }</td></tr>
 </table><br/><br/>
