--- a/theme/foyers/templates/mails/reservationJeunePro.html
+++ b/theme/foyers/templates/mails/reservationJeunePro.html
@@ -1,13 +1,21 @@
 <!--mail pour la réservation à l'Étoile de la Mer-->
 <html><body>
-<div class="row">
+<!--<div class="row">
   <div class="col-sm-6 text-center">
     <h3 style='font-style:italic'>Candidature pour le foyer</h3><br/>
     <h1><span style='text-transform:capitalize'>{ prenom }</span> <span style='text-transform:uppercase'>{ nom }</span></h1>
     <h3>{ age } ans (à ce jour)</h3>
     <h3><b>Jeune professionnel</b> : { profession } </h3>
   </div>
-</div><br/>
+</div><br/>-->
+<table width=50%><tr>
+  <div style='text-align:center'>
+    <h3 style='font-style:italic'>Candidature pour le foyer</h3><br/>
+    <h1><span style='text-transform:capitalize'>{ prenom }</span> <span style='text-transform:uppercase'>{ nom }</span></h1>
+    <h3>{ age } ans (à ce jour)</h3>
+    <h3><b>Jeune professionnel</b> : { profession } </h3>
+  </div>
+</tr></table><br/>
 
 <table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
     <tr><td bgcolor='#8CACBB' width=100% colspan=3 style='text-align:center;font-size:1.2em;'><i>1) Présentation générale et intérêt porté pour le foyer</i></td></tr>
