--- a/theme/foyers/templates/blocks/formulaire/etudes_travail.html
+++ b/theme/foyers/templates/blocks/formulaire/etudes_travail.html
@@ -44,7 +44,7 @@
                     </a>
                     <ul class="dropdown-menu" role="menu">
                         <datetimepicker data-ng-model="contactCtrl.contactData.dateResultats"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateResultats', startView: 'year', minView:'day'}" data-on-set-time="contactCtrl.contactData.dateResultats = (contactCtrl.contactData.dateResultats |date:'dd/MM/yyyy'); moment.locale('fr')"/>
-                    </ul> 
+                    </ul>
                 </div>
             </div>
         </div>
@@ -89,19 +89,19 @@
     <div class="row" ng-if="!etudiant && !personneConnue">
         <div class="col-sm-4"><label for="contrat" class="label_style">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat")}}*</label></div>
         <div class="col-sm-8">
-            <input type="radio"  name="contrat" id="cdi" value="cdi" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = false;">
+            <input type="radio"  name="contrat" id="cdi" value="CDI" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = false;">
                         <label for="cdi" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.CDI")}}</label>
-            <input type="radio"  name="contrat" id="cdd" value="cdd" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = true;" required>
+            <input type="radio"  name="contrat" id="cdd" value="CDD" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = true;" required>
                         <label for="cdd" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.CDD")}}</label>
-            <input type="radio"  name="contrat" id="stage" value="stage" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = true;">
+            <input type="radio"  name="contrat" id="stage" value="STAGE" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = true;">
                         <label for="stage" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Stage")}}</label>
-            <input type="radio"  name="contrat" id="alternance" value="alternance" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = false;">
+            <input type="radio"  name="contrat" id="alternance" value="ALTERANCE" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = false;">
                         <label for="alternance" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Alternance")}}</label>
-            <input type="radio"  name="contrat" id="apprentissage" value="apprentissage" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = false;">
+            <input type="radio"  name="contrat" id="apprentissage" value="APPRENTISSAGE" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = false;">
                         <label for="apprentissage" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Apprentissage")}}</label>
-            <input type="radio"  name="contrat" id="interim" value="interim" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = false;">
+            <input type="radio"  name="contrat" id="interim" value="INTERIM" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = false;">
                         <label for="interim" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Interim")}}</label>
-            <input type="radio"  name="contrat" id="demandeur" value="demandeur" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = false;">
+            <input type="radio"  name="contrat" id="demandeur" value="DEMANDEUR D'EMPLOI" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = false;">
                         <label for="demandeur" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Demandeur.Emploi")}}</label>              
         </div>
     </div>
@@ -115,7 +115,7 @@
                 </a>
                 <ul class="dropdown-menu" role="menu">
                     <datetimepicker data-ng-model="contactCtrl.contactData.dateDebutContrat"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateDebutContrat', startView: 'year', minView:'day'}" data-on-set-time="contactCtrl.contactData.dateDebutContrat = (contactCtrl.contactData.dateDebutContrat |date:'dd/MM/yyyy'); moment.locale('fr')"/>
-                </ul> 
+                </ul>
             </div>
         </div>
     </div>
