--- a/theme/foyers/templates/blocks/formulaire/etudes_travail.html
+++ b/theme/foyers/templates/blocks/formulaire/etudes_travail.html
@@ -93,12 +93,12 @@
                         <label for="cdi" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.CDI")}}</label>
             <input type="radio"  name="contrat" id="cdd" value="CDD" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = true;" required>
                         <label for="cdd" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.CDD")}}</label>
-            <input type="radio"  name="contrat" id="stage" value="STAGE" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = true;">
+            <!--<input type="radio"  name="contrat" id="stage" value="STAGE" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = true;">
                         <label for="stage" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Stage")}}</label>
             <input type="radio"  name="contrat" id="alternance" value="ALTERANCE" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = false;">
                         <label for="alternance" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Alternance")}}</label>
             <input type="radio"  name="contrat" id="apprentissage" value="APPRENTISSAGE" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = false;">
-                        <label for="apprentissage" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Apprentissage")}}</label>
+                        <label for="apprentissage" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Apprentissage")}}</label>-->
             <input type="radio"  name="contrat" id="interim" value="INTERIM" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = false;">
                         <label for="interim" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Interim")}}</label>
             <input type="radio"  name="contrat" id="demandeur" value="DEMANDEUR D'EMPLOI" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouCDD = false;">
