--- a/theme/foyers/templates/blocks/formulaire/lettre_motivation.html
+++ b/theme/foyers/templates/blocks/formulaire/lettre_motivation.html
@@ -7,7 +7,7 @@
 <div class="container">
         <div class="row">
             <div class="col-sm-4"><label for="engagements" class="label_style">{{rubedo.translate("Block.Inscription.Motivation.Engagements")}} *</label></div>
-            <div class="col-sm-8"><textarea class="form-control" rows="5" id="engagements" ng-model="contactCtrl.contactData.engagements" name="engagements" required></textarea></div>
+            <div class="col-sm-8"><textarea class="form-control" rows="5" id="engagements" ng-model="contactCtrl.contactData.engagements" name="engagements" placeholder="Tu peux expliquer en quoi ces engagements ont du prix à tes yeux" required></textarea></div>
         </div>
 </div>
 <div class="container">
