--- a/theme/foyers/templates/blocks/simpleContactFoyers.html
+++ b/theme/foyers/templates/blocks/simpleContactFoyers.html
@@ -8,10 +8,14 @@
         </div>
         <div class="row text-center" style="margin-bottom:50px;">
             <div style="margin-bottom:12px;color:white;font-weight:bold;font-size:1.1em;" ><h4>{{rubedo.translate("Block.Inscription.Inscrire.Comme","S'inscrire comme")}}:</h4></div>
-            <div class="row">
+            <!--<div class="row">
                 <input type="radio"  name="statut" id="etudiant" value="etudiant" ng-model="contactCtrl.contactData.statut" ng-click="showFormulaire = true;etudiant=true;jeunePro=false">
                             <label for="etudiant" class="sexe_label boite">{{rubedo.translate("etudiant")}}</label>
-            </div>
+            </div>-->
+            
+            <a href="#bottom" ng-click="showFormulaire = true;etudiant=true;jeunePro=false"><label for="etudiant" class="sexe_label boite">{{rubedo.translate("etudiant")}}</label></a>
+            
+            
             <div class="row">
                 <input type="radio"  name="jeunePro" id="jeunePro" value="jeunePro" ng-model="contactCtrl.contactData.statut" ng-click="showFormulaire = true;etudiant=false;jeunePro=true" required>
                         <label for="jeunePro" class="sexe_label boite">{{rubedo.translate("jeunePro")}}</label>
@@ -20,8 +24,12 @@
         
 
         <div ng-if="showFormulaire">
-        
-                <h2 id="bottom" class="capital txt-red" ng-class="{'displayed' : contactCtrl.currentStage==1}" ng-click="contactCtrl.setCurrentStage(0,infos_personnelles.$valid)">{{rubedo.translate("Block.Inscription.InfosPerso", "Informations personnelles")}}
+                
+                <!-- Pour faire descendre le formulaire lors du choix du type de public-->
+                <a name="bottom"></a>
+                
+                
+                <h2  class="capital txt-red" ng-class="{'displayed' : contactCtrl.currentStage==1}" ng-click="contactCtrl.setCurrentStage(0,infos_personnelles.$valid)">{{rubedo.translate("Block.Inscription.InfosPerso", "Informations personnelles")}}
                         <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="contactCtrl.currentStage>1"></span>
                 </h2>
                 <div id="inscriptionStage1" class="collapse in"> 
