--- a/theme/foyers/templates/blocks/simpleContactFoyers_ladefense.html
+++ b/theme/foyers/templates/blocks/simpleContactFoyers_ladefense.html
@@ -44,7 +44,7 @@
                 </h2>
                 <div id="inscriptionStage1" class="collapse in"> 
                     <ng-form name="infos_personnelles">
-                            <div  class="row" ng-include="contactCtrl.general_infos"></div>
+                            <div  class="row" ng-include="contactCtrl.general_infos_ladefense"></div>
                             <div class="row text-center">
                                 <div class="button submit cursor-as-pointer" ng-class="{'disabled' : infos_personnelles.$invalid}" ng-click="contactCtrl.setCurrentStage(1,infos_personnelles.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
                                 <p ng-if="infos_personnelles.$invalid && infos_personnelles.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
@@ -105,7 +105,7 @@
                 
                 <div id="inscriptionStage5" class="collapse">
                             <ng-form name="infos_complementaires">
-                                    <div  class="row" ng-include="contactCtrl.complement_infos"></div>
+                                    <div  class="row" ng-include="contactCtrl.complement_infos_ladefense"></div>
                                     <div class="row text-center">
                                         <div class="button submit cursor-as-pointer" ng-class="{'disabled' : infos_complementaires.$invalid}" ng-click="contactCtrl.setCurrentStage(5,infos_complementaires.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
                                         <p ng-if="infos_complementaires.$invalid && infos_complementaires.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
