--- a/theme/foyers/templates/blocks/formulaire/infos_complementaires_ladefense.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_complementaires_ladefense.html
@@ -4,7 +4,7 @@
             <div class="col-sm-8">
                 <div class="dropdown">
                     <a showtab class="dropdown-toggle" id="dropdowndateRentreeSouhaitee" role="button" data-toggle="dropdown" data-target="#" href="#">
-                        <div class="input-group"><input readonly id="dateNaiss" ng-model="contactCtrl.contactData.dateRentreeSouhaitee" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        <div class="input-group"><input readonly id="dateRentreeSouhaitee" ng-model="contactCtrl.contactData.dateRentreeSouhaitee" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                         </div>
                     </a>
                     <ul class="dropdown-menu" role="menu">
@@ -18,7 +18,7 @@
             <div class="col-sm-8">
                 <div class="dropdown">
                     <a showtab class="dropdown-toggle" id="dropdowndateSortieSouhaitee" role="button" data-toggle="dropdown" data-target="#" href="#">
-                        <div class="input-group"><input readonly id="dateNaiss" ng-model="contactCtrl.contactData.dateSortieSouhaitee" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        <div class="input-group"><input readonly id="dateSortieSouhaitee" ng-model="contactCtrl.contactData.dateSortieSouhaitee" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                         </div>
                     </a>
                     <ul class="dropdown-menu" role="menu">
