--- a/theme/foyers/templates/blocks/simpleContactFoyers_ladefense.html
+++ b/theme/foyers/templates/blocks/simpleContactFoyers_ladefense.html
@@ -4,7 +4,7 @@
         
         <div class="row bloc-icone">
             <div class="col-xs-12 text-center">
-                <p><a href="#bottom" ng-click="candidater=true;showFormulaire=false"></a></p>
+                <p><a href="#bottom" ng-click="candidater=true;showFormulaire=false;isLadefense=true"></a></p>
                 <h4>Je candidate!</h3>
             </div>
         </div>
