--- a/theme/foyers/templates/mails/reservationJeunePro_ladefense.html
+++ b/theme/foyers/templates/mails/reservationJeunePro_ladefense.html
@@ -10,7 +10,7 @@
 </div><br/>-->
 <table width=50%><tr>
   <div style='text-align:center'>
-    <h3 style='font-style:italic'>Candidature pour le foyer</h3><br/>
+    <h3 style='font-style:italic'>Candidature pour le foyer Paris - La Défense</h3><br/>
     <h1><span style='text-transform:capitalize'>{ prenom }</span> <span style='text-transform:uppercase'>{ nom }</span></h1>
     <h3>{ age } ans (à ce jour)</h3>
     <h3><b>Jeune professionnel</b> : { profession } </h3><br/>
