--- a/theme/foyers/templates/mails/reservationEtudiant_ladefense.html
+++ b/theme/foyers/templates/mails/reservationEtudiant_ladefense.html
@@ -2,7 +2,7 @@
 <html><body>
 <table width=50%><tr>
   <div style='text-align:center'>
-    <h3 style='font-style:italic'>Candidature pour le foyer</h3><br/>
+    <h3 style='font-style:italic'>Candidature pour le foyer Paris - La Défense</h3><br/>
     <h1><span style='text-transform:capitalize'>{ prenom }</span> <span style='text-transform:uppercase'>{ nom }</span></h1>
     <h3>{ age } ans (à ce jour)</h3>
     <h3><b>Étudiant</b> : { etudes } </h3><br/>
