--- a/theme/foyers/templates/mails/reservationEtudiant.html
+++ b/theme/foyers/templates/mails/reservationEtudiant.html
@@ -1,6 +1,6 @@
 <!--mail pour la rcandidature des étudiants-->
 <html><body>
-<table width=50%><tr>
+<table width=100%><tr>
   <div style='text-align:center'>
     <h3 style='font-style:italic'>Candidature pour le foyer</h3><br/>
     <h1><span style='text-transform:capitalize'>{ prenom }</span> <span style='text-transform:uppercase'>{ nom }</span></h1>
@@ -9,15 +9,14 @@
   </div>
 </tr></table><br/>
 
-<table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
+<table width=80% style='border: 1px solid #000000;margin: auto;' frame='box' rules='all'>
     <tr><td bgcolor='#8CACBB' width=100% colspan=3 style='text-align:center;font-size:1.2em;'><i>1) Présentation générale et intérêt porté pour le foyer</i></td></tr>
     <tr><td bgcolor="#B5D4E2" style='text-align:center' width=34%><b>Présentation du jeune</b></td><td bgcolor="#B5D4E2" style='text-align:center' width=34%><b>Ses engagements (personnels, associatifs, dans l'Église...)</b></td><td bgcolor="#B5D4E2"  style='text-align:center' width=33%><b>Pourquoi il désire rejoindre le foyer</td></tr>
     <tr><td width=34%>{ motivation }</td><td width=34%>{ engagements }</td><td width=33%>{ desir }</td></tr>
 </table><br/><br/>
 <br/> 
  
-
-<table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
+<table width=80% style='border: 1px solid #000000;margin: auto;' frame='box' rules='all'>
   <tr><td bgcolor='#8CACBB' width=100% colspan=2 style='text-align:center;font-size:1.2em;'><i>2) Informations personnelles</i></td></tr>
 <!--    <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=67%>{ nom }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Prénom</i></td><td width=67%>{ prenom }</td></tr> -->
@@ -29,7 +28,7 @@
     <tr><td bgcolor='#8CACBB' width=33%><i>Email</i></td><td width=67%>{ email }</td></tr>
 </table><br/><br/>    
 
-<table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
+<table width=80% style='border: 1px solid #000000;margin: auto;' frame='box' rules='all'>
     <tr><td bgcolor='#8CACBB' width=100% colspan=3 style='text-align:center;font-size:1.2em;'><i>3) Informations familiales</i></td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i></i></td><td bgcolor="#B5D4E2" style='text-align:center' width=34%><b>Père</b></td><td bgcolor="#B5D4E2"  style='text-align:center' width=33%><b>Mère</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=34%>{ namePere }</td><td width=33%>{ nameMere }</td></tr>
@@ -49,7 +48,7 @@
     <tr><td bgcolor="#8CACBB" width=33%><i>Ages</i></td><td width=34%>{ ageFreresSoeurs }</td></tr>
 </table><br/><br/>
 
-<table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
+<table width=80% style='border: 1px solid #000000;margin: auto;' frame='box' rules='all'>
     <tr><td bgcolor='#8CACBB' width=100% colspan=2 style='text-align:center;font-size:1.2em;'><i>4) Études</i></td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Études</i></td><td width=67%>{ etudes }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Métier envisagé</i></td><td width=67%>{ metier }</td></tr> 
@@ -63,7 +62,7 @@
     <tr><td bgcolor='#8CACBB' width=33%><i>Date de fin d'année scolaire</i></td><td width=67%>{ dateDebutAnnee }</td></tr>
 </table><br/><br/>
 
-<table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
+<table width=80% style='border: 1px solid #000000;margin: auto;' frame='box' rules='all'>
     <tr><td bgcolor='#8CACBB' width=100% colspan=3 style='text-align:center;font-size:1.2em;'><i>5) Informations complémentaires</i></td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Loisirs</i></td><td width=67%>{ loisirs }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Comment le jeune a-t-il connu le foyer?</i></td><td width=67%>{ origine }</td></tr>
