--- a/theme/foyers/templates/mails/reservationJeunePro_ladefense.html
+++ b/theme/foyers/templates/mails/reservationJeunePro_ladefense.html
@@ -8,7 +8,7 @@
     <h3><b>Jeune professionnel</b> : { profession } </h3>
   </div>
 </div><br/>-->
-<table width=50%><tr>
+<table width=100%><tr>
   <div style='text-align:center'>
     <h3 style='font-style:italic'>Candidature pour le foyer Paris - La Défense</h3><br/>
     <h1><span style='text-transform:capitalize'>{ prenom }</span> <span style='text-transform:uppercase'>{ nom }</span></h1>
@@ -19,7 +19,7 @@
   </div>
 </tr></table><br/>
 
-<table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
+<table width=80% style='border: 1px solid #000000;margin: auto;' frame='box' rules='all'>
     <tr><td bgcolor='#8CACBB' width=100% colspan=3 style='text-align:center;font-size:1.2em;'><i>1) Présentation générale et intérêt porté pour le foyer</i></td></tr>
     <tr><td bgcolor="#B5D4E2" style='text-align:center' width=34%><b>Présentation du jeune</b></td><td bgcolor="#B5D4E2" style='text-align:center' width=34%><b>Ses engagements (personnels, associatifs, dans l'Église...)</b></td><td bgcolor="#B5D4E2"  style='text-align:center' width=33%><b>Pourquoi il désire rejoindre le foyer</td></tr>
     <tr><td width=34%>{ motivation }</td><td width=34%>{ engagements }</td><td width=33%>{ desir }</td></tr>
@@ -28,7 +28,7 @@
 <br/> 
  
 
-<table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
+<table width=80% style='border: 1px solid #000000;margin: auto;' frame='box' rules='all'>
   <tr><td bgcolor='#8CACBB' width=100% colspan=2 style='text-align:center;font-size:1.2em;'><i>2) Informations personnelles</i></td></tr>
 <!--    <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=67%>{ nom }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Prénom</i></td><td width=67%>{ prenom }</td></tr> -->
@@ -45,7 +45,7 @@
     <tr><td bgcolor='#8CACBB' width=33%><i>Téléphone fixe</i></td><td width=67%>{ telFixe }</td></tr>
 </table><br/><br/>
 
-<table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
+<table width=80% style='border: 1px solid #000000;margin: auto;' frame='box' rules='all'>
     <tr><td bgcolor='#8CACBB' width=100% colspan=3 style='text-align:center;font-size:1.2em;'><i>3) Informations familiales</i></td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i></i></td><td bgcolor="#B5D4E2" style='text-align:center' width=34%><b>Père</b></td><td bgcolor="#B5D4E2"  style='text-align:center' width=33%><b>Mère</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=34%>{ namePere }</td><td width=33%>{ nameMere }</td></tr>
@@ -65,7 +65,7 @@
     <tr><td bgcolor="#8CACBB" width=33%><i>Ages</i></td><td width=34%>{ ageFreresSoeurs }</td></tr>
 </table><br/><br/>
 
-<table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
+<table width=80% style='border: 1px solid #000000;margin: auto;' frame='box' rules='all'>
     <tr><td bgcolor='#8CACBB' width=100% colspan=2 style='text-align:center;font-size:1.2em;'><i>4) Situation professionnelle</i></td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Domaine professionnel</i></td><td width=67%>{ profession }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Type de contrat</i></td><td width=67%>{ contrat }</td></tr>
@@ -77,7 +77,7 @@
     <tr><td bgcolor='#8CACBB' width=33%><i>Diplômes déjà obtenus</i></td><td width=67%>{ diplomes }</td></tr>
 </table><br/><br/>
 
-<table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
+<table width=80% style='border: 1px solid #000000;margin: auto;' frame='box' rules='all'>
     <tr><td bgcolor='#8CACBB' width=100% colspan=3 style='text-align:center;font-size:1.2em;'><i>5) Ressources mensuelles à la date d'entrée souhaitée</i></td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Le loyer sera payé par : </i></td><td width=67%>{ paiementLoyer }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Salaire net ou revenu d’activité (€/mois)</i></td><td width=67%>{ salaire }</td></tr>
@@ -87,7 +87,7 @@
     <tr><td bgcolor='#8CACBB' width=33%><i>Revenu fiscal de référence (€/mois)</i></td><td width=67%>{ revenuFiscal }</td></tr>
 </table><br/><br/>
 
-<table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
+<table width=80% style='border: 1px solid #000000;margin: auto;' frame='box' rules='all'>
     <tr><td bgcolor='#8CACBB' width=100% colspan=3 style='text-align:center;font-size:1.2em;'><i>6) Informations complémentaires</i></td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Loisirs</i></td><td colspan=2 width=67%>{ loisirs }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Comment le jeune a-t-il connu le foyer?</i></td><td width=67%>{ origine }</td></tr>
